syntax = "proto3";
package Microsoft.Azure.Cosmos.Serialization.HybridRow.Tests.Perf.CassandraHotel;

import "google/protobuf/wrappers.proto";

option csharp_namespace = "Microsoft.Azure.Cosmos.Serialization.HybridRow.Tests.Perf.CassandraHotel.Protobuf";

message PostalCode {
	google.protobuf.Int32Value zip = 1;
	google.protobuf.Int32Value plus4 = 2;
}

message Address {
	google.protobuf.StringValue street = 1;
	google.protobuf.StringValue city = 2;
	google.protobuf.StringValue state = 3;
	PostalCode postal_code = 4;
}

message Hotels {
	google.protobuf.StringValue hotel_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue phone = 3;
	Address address = 4;
}

message Available_Rooms_By_Hotel_Date {
	google.protobuf.StringValue hotel_id = 1;
	google.protobuf.Int64Value date = 2; // datetime
	google.protobuf.Int32Value room_number = 3;
	google.protobuf.BoolValue is_available = 4;
}

message Guests {
	google.protobuf.StringValue guest_id = 1;  // guid 
	google.protobuf.StringValue first_name = 2;
	google.protobuf.StringValue last_name = 3;
	google.protobuf.StringValue title = 4;
	repeated string emails = 5;
	repeated string phone_numbers = 6;
	map<string, Address> addresses = 7;
	google.protobuf.StringValue confirm_number = 8;
}
